# hello-python

./: .codeclimate.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  Makefile  Pipfile  README.md  setup.cfg  setup.py
ci-scripts/: bump-python-version.sh
docs/: conf.py  examples.md
docs/contributing/: COMMIT_GUIDELINES.md
hello_python/: version.py
hello_python/tests/: test_version.py
scripts/: pyenv.sh  setup.sh  test.sh
