[metadata]
name = hello-python
version = attr: hello_python.version.__version__
description = A Python module project skeleton
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = http://hello-python.readthedocs.io
    Source Code = https://github.com/PythonSanSebastian/hello-python
    Bug Tracker = https://github.com/PythonSanSebastian/hello-python/issues
    Changelog = https://github.com/PythonSanSebastian/hello-python/blob/master/CHANGELOG.md
author = Alexandre M. Savio
author_email = info@pyss.org
license = Apache License Version 2.0
license-file = LICENSE
keywords =
    python
    skeleton
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages=find:
include_package_data = True
test_suite = tests
setup_requires =
    wheel
    setuptools
    pytest-runner
install_requires =
tests_require =
    pytest
    arrow==3.4

[options.extras_require]
arrow =
    arrow==3.4

[pydocstyle]
inherit = false
convention = numpy
match = (?!test_).*\.py
ignore-decorators = property

[pycodestyle]
max-line-length = 120


[flake8]
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E501,E126

[isort]
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = False
indent = 4
line_length = 79
wrap_length = 60
not_skip = __init__.py
length_sort = True
known_first_party = hello_python
known_third_party = pytest
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.7
ignore_missing_imports = True
warn_unused_configs = True

[tox:tox]
envlist =
    lint,
    doclint,
    isort,
    mypy,
    tests
skipsdist = True

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
norecursedirs =
    node_modules

[coverage:run]
branch = True

[coverage:report]
include =
    hello_python/*
omit =
    */tests/*

[testenv]
basepython = python3
whitelist_externals = make
deps =
    lint: flake8
    lint: flake8-bugbear
    doclint: pydocstyle
    isort: isort
    mypy: mypy
passenv =
    CI = 1
setenv =
    PYTHONPATH = {toxinidir}:{toxinidir}
    TESTING = True
commands =
    lint: flake8 hello_python
    isort: isort -c -rc hello_python
    mypy: mypy hello_python
    doclint: pydocstyle --convention=numpy

[testenv:tests]
deps =
    coverage
commands =
    python -m pip install -e .
    coverage run -m pytest
    coverage report

[testenv:docs]
deps = -rdocs/requirements.txt
changedir = {toxinidir}/docs
commands =
    sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html

[bumpversion]
current_version = 0.0.1
commit = True
tag = False
tag_name = "v{new_version}"

[bumpversion:file:hello_python/version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}",
replace = version="{new_version}",
